k8s/myecommerce-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: myecommerce
  labels:
    name: myecommerce
