k8s/productservice-mssql-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productservice-mssql-deploy
  namespace: myecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productservice-mssql
  template:
    metadata:
      labels:
        app: productservice-mssql
    spec:
      containers:
        - name: mssql
          image: mcr.microsoft.com/mssql/server:2017-latest
          ports:
            - containerPort: 1433
          volumeMounts:
            - mountPath: /var/opt/mssql/data
              name: mssqldb
      volumes:
        - name: mssqldb
          persistentVolumeClaim:
            claimName: productservice-mssql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: productservice-mssql-clusterip-srv
  namespace: myecommerce
spec:
  type: ClusterIP
  selector:
    app: productservice-mssql
  ports:
    - name: productservice-mssql
      protocol: TCP
      port: 1433
      targetPort: 1433
