k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  namespace: myecommerce
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  tls:
  - hosts:
    - myecommerce.com
    secretName: myecommerce-tls
  rules:
  - host: myecommerce.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webspa-clusterip-srv
            port:
              number: 80
  - host: services.myecommerce.com
    http:
      paths:
      - path: /api/products
        pathType: Prefix
        backend:
          service:
            name: productservice-clusterip-srv
            port:
              number: 80
